feat: 아지트 멤버 삭제 API 구현
